adding listing and expanding swagger
