# apartments-api/src/apartmentDb/models/open_house_event.js
@@ -1,14 +1,13 @@
 'use strict';
 
 function define(sequelize, DataTypes) {
-  return sequelize.define('open_house', {
+  return sequelize.define('open_house_event', {
     start_time: { type: DataTypes.DATE, allowNull: false },
     end_time: { type: DataTypes.DATE, allowNull: false },
     comments:  DataTypes.TEXT
-
   }, {
     classMethods: {
-      associate: models => models.open_house.belongsTo(models.listing, { foreignKey: { allowNull: false }, onDelete: 'CASCADE' })
+      associate: models => models.open_house_event.belongsTo(models.listing, { foreignKey: { allowNull: false }, onDelete: 'CASCADE' })
     }
   });
 }
